# OpenDTAM-anuranbaka

./: .gitignore  CMakeLists.txt  README.md  camera_settings_ahanda.yaml  camera_settings_phone_camera.yaml  manifest.xml
Cpp/: CMakeLists.txt  convertAhandaPovRayToStandard.cpp  convertPovRayToCamMatrix.cpp  dense-mapping-orbslam-tracking.cpp  testmapper.cpp
Cpp/CostVolume/: CMakeLists.txt  CostVolume.cpp  CostVolume.cu  CostVolume.cuh  CostVolume.hpp  optimizer.part.cpp  updateCost.part.cpp  updateCost.part.hpp
Cpp/DepthmapDenoiseWeightedHuber/: DepthmapDenoiseWeightedHuber.cpp  DepthmapDenoiseWeightedHuber.cu  DepthmapDenoiseWeightedHuber.cuh  DepthmapDenoiseWeightedHuber.hpp  Map_iteratorCore.part.cpp
Cpp/DepthmapDenoiseWeightedHuber/tests/: CMakeLists.txt  computeG.cu  computeG.cuh  test_computeG.cpp
Cpp/Optimizer/: Optimizer.cpp  Optimizer.cu  Optimizer.cuh  Optimizer.hpp
Cpp/Track/: Alignment.cpp  CMakeLists.txt
data/: openDTAM-settings.yaml
